k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ethiopian-shop
  labels:
    name: ethiopian-shop
    environment: production
